--- a/templates/shop/category.html
+++ b/templates/shop/category.html
@@ -58,40 +58,15 @@
         <div class="dividing_line_filter"></div>
 
         <div class="grid_category">
+            {% for product in products %}
             <div>
                 <a href="">
-                <div><img src="img/product_250x250.png" class="img_category"></div>
-                <div>Компьютер</div>
+                <div><img src="{{ product.image_preview.url }}" class="img_category"></div>
+                <div>{{ product.brand.name }} {{ product.name }}</div>
+                <div>{{ product.price }} ₽</div>
                 </a>
             </div>
-
-            <div>
-                <a href="">
-                <div><img src="img/product_250x250.png" class="img_category"></div>
-                <div>Компьютер</div>
-                </a>
-            </div>
-
-            <div>
-                <a href="">
-                <div><img src="img/product_250x250.png" class="img_category"></div>
-                <div>Компьютер</div>
-                </a>
-            </div>
-
-            <div>
-                <a href="">
-                <div><img src="img/product_250x250.png" class="img_category"></div>
-                <div>Компьютер</div>
-                </a>
-            </div>
-
-            <div>
-                <a href="">
-                <div><img src="img/product_250x250.png" class="img_category"></div>
-                <div>Компьютер</div>
-                </a>
-            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
