Shop - на страницу index.html сделан вывод всех товаров (не эффективно, товаров может быть много). На страницу index.html необходимо сделать вывод товаров по другим критериям - самые поопулярные, больше отзывов или оценок и т.п.

--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -40,40 +40,15 @@
         <div class="product_caption">Горячая 5-ка товаров</div>
 
         <div class="grid_category">
+            {% for product in products %}
             <div>
                 <a href="">
-                <div><img src="img/product_250x250.png" class="img_category"></div>
-                <div>Компьютер</div>
+                <div><img src="{{ product.image_preview.url }}" class="img_category"></div>
+                <div>{{ product.brand.name }} {{ product.name }}</div>
+                <div>{{ product.price }} ₽</div>
                 </a>
             </div>
-
-            <div>
-                <a href="">
-                <div><img src="img/product_250x250.png" class="img_category"></div>
-                <div>Компьютер</div>
-                </a>
-            </div>
-
-            <div>
-                <a href="">
-                <div><img src="img/product_250x250.png" class="img_category"></div>
-                <div>Компьютер</div>
-                </a>
-            </div>
-
-            <div>
-                <a href="">
-                <div><img src="img/product_250x250.png" class="img_category"></div>
-                <div>Компьютер</div>
-                </a>
-            </div>
-
-            <div>
-                <a href="">
-                <div><img src="img/product_250x250.png" class="img_category"></div>
-                <div>Компьютер</div>
-                </a>
-            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
