CSS - сделана стилизация форм аутентификации

--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -37,14 +37,14 @@
                     <label for="{{ form.username.id_for_label }}">
                         {{ form.username.label }}: <span class="red_text">*</span>
                     </label>
-                    <div>{{ form.username|addclass:'add_task' }}</div>
+                    <div>{{ form.username|addclass:'input_text' }}</div>
                 </div>
                 <div>
                     {{ form.password.errors }}
                     <label for="{{ form.password.id_for_label }}">
                         {{ form.password.label }}: <span class="red_text">*</span>
                     </label>
-                    <div>{{ form.password|addclass:'add_task' }}</div>
+                    <div>{{ form.password|addclass:'input_text' }}</div>
                 </div>
 
                 <div class="login_buttons">
