--- a/templates/users/password_reset_confirm.html
+++ b/templates/users/password_reset_confirm.html
@@ -39,7 +39,7 @@
                             <label for="{{ field.id_for_label }}">
                                 {{ field.label }}: {% if field.field.required %}<span class="red_text">*</span>{% endif %}
                             </label>
-                            <div>{{ field|addclass:'add_task' }}</div>
+                            <div>{{ field|addclass:'input_text' }}</div>
                         </div>
                     {% endfor %}
 
