--- a/static_dev/css/style.css
+++ b/static_dev/css/style.css
@@ -55,6 +55,11 @@ header {
   color: rgb(199, 0, 0);
 }
 
+.warning_text {
+  margin: 0px 30px;
+  margin-bottom: 8px;
+}
+
 .button_header {
   display: grid;
   place-items: center;
@@ -135,7 +140,7 @@ aside {
   font-size: 20px;
   text-align: center;
   font-weight: bold;
-  margin: 10px 0;  
+  margin: 10px 0;
 }
 
 .grid_category {
@@ -201,4 +206,134 @@ aside {
 
 .category_active {
   font-weight: bolder;
+}
+
+
+/* стилизация блока аутентификации */
+.login {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  margin: 80px 0;
+}
+
+.login_block {
+  display: grid;
+  place-items: center;
+  text-align: center;
+  width: 600px;
+  height: auto;
+  padding: 24px 0px;
+  background-color: #cacaca;
+  font-size: 20px;
+  border-radius: 10px;
+  border: 2px solid rgb(0, 0, 0);
+  padding-bottom: 34px;
+}
+
+.login_title {
+  font-size: 34px;
+  margin-bottom: 8px;
+}
+
+.login_form {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  /* align-items: center; */
+  gap: 15px;
+  /* margin: 20px 0; */
+}
+
+.login_buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.login_button_signin {
+  display: grid;
+  place-items: center;
+  background-color: #ef8d00;
+  width: 140px;
+  size: 21px;
+  height: 44px;
+  font-family: 'Minion Pro';
+  font-size: 18pt;
+  border-radius: 10px;
+  border: 0px;
+}
+
+.login_button_signin:hover {
+  background-color: #f0a234;
+  border: 2px solid rgb(0, 0, 0);
+  cursor: pointer;
+}
+
+.login_button_signin:active {
+  background-color: #f1bd74;
+}
+
+.login_button_forgotpassword {
+  display: grid;
+  place-items: center;
+  background-color: #ff2d2d;
+  width: 165px;
+  height: 44px;
+  font-family: 'Minion Pro';
+  font-size: 14pt;
+  border-radius: 10px;
+  border: 0px;
+}
+
+.login_button_forgotpassword:hover {
+  background-color: #e46666;
+  width: 161px;
+  height: 41px;
+  border: 2px solid rgb(0, 0, 0);
+  cursor: pointer;
+}
+
+.login_button_forgotpassword:active {
+  background-color: #e78e8e;
+}
+
+.signup_button {
+  display: grid;
+  place-items: center;
+  background-color: #ef8d00;
+  width: auto;
+  size: 21px;
+  height: 44px;
+  font-family: 'Minion Pro';
+  font-size: 18pt;
+  border-radius: 10px;
+  border: 0px;
+}
+
+.signup_button:hover {
+  background-color: #f0a234;
+  border: 2px solid rgb(0, 0, 0);
+  cursor: pointer;
+}
+
+.signup_button:active {
+  background-color: #f3d8b3;
+}
+
+.input_text {
+  width: 300px;
+  height: 20px;
+  border-radius: 10px;
+  border: 1px solid rgb(0, 0, 0);
+  padding: 10px;
+  font-size: 12pt;
+}
+
+.input_text:hover {
+  width: 298px;
+  height: 18px;
+  border: 2px solid rgb(0, 0, 0);
 }
