--- a/templates/users/password_change_form.html
+++ b/templates/users/password_change_form.html
@@ -4,7 +4,7 @@
 
 {% block title %} Смена пароля {% endblock %}
 
-{% block cabinet_data %}
+{% block content %}
 
 <div class="login">
 
@@ -30,7 +30,7 @@
                     <label for="{{ field.id_for_label }}">
                         {{ field.label }}: {% if field.field.required %}<span class="red_text">*</span>{% endif %}
                     </label>
-                    <div>{{ field|addclass:'add_task' }}</div>
+                    <div>{{ field|addclass:'input_text' }}</div>
                 </div>
             {% endfor %}
 
