--- a/static_dev/css/style.css
+++ b/static_dev/css/style.css
@@ -337,3 +337,30 @@ aside {
   height: 18px;
   border: 2px solid rgb(0, 0, 0);
 }
+
+.cabinet_caption {
+  text-align: center;
+  font-size: 25px;
+  margin: 1px 0;
+}
+
+.cabinet_data_grid {
+  display: grid;
+  grid-template-columns: 160px 1fr;
+  font-size: 18pt;
+  grid-column-gap: 10px;
+}
+
+.cabinet_data_self {
+  display: grid;
+  align-items: center;
+  background-color: #ebebeb;
+  margin: 0px 0px;
+  padding-left: 15px;
+  height: 46px;
+}
+
+/* пустой блок */
+.empty {
+  height: 20px;
+}
