--- a/templates/users/password_change_form.html
+++ b/templates/users/password_change_form.html
@@ -1,10 +1,10 @@
-{% extends "base.html" %}
+{% extends "base_cabinet.html" %}
 
 {% load form_filters %}
 
 {% block title %} Смена пароля {% endblock %}
 
-{% block content %}
+{% block cabinet_data %}
 
 <div class="login">
 
