Shop - во view.index получаем тройку товаров, больше всего добавленных в избранное, которые будут выводится на главную страницу index.html

--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -37,7 +37,7 @@
         </div>
 
 
-        <div class="product_caption">Горячая 5-ка товаров</div>
+        <div class="product_caption">Тройка любимых товаров</div>
 
         {% include "includes/product_list.html" %}
     </div>
