--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -25,7 +25,7 @@
 
 
     <div class="header_grid">
-        <div class="button_header">Корзина</div>
+        <a href="{% url 'users:shopping_cart' %}"><div class="button_header">Корзина</div></a>
     </div>
 </div>
 
