--- a/templates/shop/product.html
+++ b/templates/shop/product.html
@@ -49,22 +49,27 @@
             <div class="product_data_self">{{ product.price }} ₽</div>
           </div>
 
-          <div class="buttons_product">
-            <div class="button_header">
-              <div>В корзину</div>
-          </div>
-
-            {% if is_favorite_product %}
-                <a href="{% url 'shop:add_del_favorite' product.id %}"><div class="button_header small_text">
-                  <div>Из избранного</div>
+        <div class="buttons_product">
+            {% if is_in_shopping_cart_product %}
+                <a href="{% url 'users:shopping_cart' %}"><div class="button_header small_text">
+                    <div>Товар в корзине</div>
                 </div></a>
             {% else %}
-                <a href="{% url 'shop:add_del_favorite' product.id %}"><div class="button_header">
-                  <div>В избранное</div>
+                <a href="{% url 'shop:add_product_in_shopping_cart' product.id %}"><div class="button_header">
+                    <div>В корзину</div>
                 </div></a>
             {% endif %}
 
-          <div class="empty"></div>
+            {% if is_favorite_product %}
+                <a href="{% url 'shop:add_del_favorite' product.id %}"><div class="button_header small_text">
+                    <div>Из избранного</div>
+                </div></a>
+            {% else %}
+                <a href="{% url 'shop:add_del_favorite' product.id %}"><div class="button_header">
+                    <div>В избранное</div>
+                </div></a>
+            {% endif %}
+            <div class="empty"></div>
         </div>
     </div>
 </div>
