--- a/design/html/style.css
+++ b/design/html/style.css
@@ -82,10 +82,6 @@ header {
   background-color: #ffffff;
 }
 
-.small_text {
-  font-size: 14px;
-}
-
 footer {
   height: 70px;
   background: #f0efef;
@@ -440,4 +436,32 @@ aside {
 
 .button_small:active {
   background-color: #ffffff;
+}
+
+.button_form {
+  display: grid;
+  place-items: center;
+  background-color: #cfcccc;
+  width: 125px;
+  height: 34px;
+  font-size: 20px;
+  border-radius: 4px;
+  border: 0px solid rgb(0, 0, 0);
+  font-family: 'Minion Pro';
+}
+
+.button_form:hover {
+  background-color: #e4e4e4;
+  border: 1px solid rgb(0, 0, 0);
+  /* width: 123px; */
+  /* height: 32px; */
+  cursor: pointer;
+}
+
+.button_form:active {
+  background-color: #ffffff;
+}
+
+.small_text {
+  font-size: 14px;
 }
