--- a/templates/users/shopping_cart.html
+++ b/templates/users/shopping_cart.html
@@ -32,9 +32,10 @@
                   <div>Оформить</div>
             </div>
 
-            <div class="button_header">
-                  <div class="small_text">Очистить корзину</div>
-            </div>
+            <form method="post" onsubmit="return confirm('Точно очистить корзину?')" action="{% url 'users:clean_shopping_cart' %}">
+                  {% csrf_token %}
+                  <input type="submit" value="Очистить корзину" class="button_form small_text">
+            </form>
       </div>
 </div>
 {% else %}
