--- a/static_dev/css/style.css
+++ b/static_dev/css/style.css
@@ -402,12 +402,25 @@ aside {
 }
 
 .product_cart_self {
-  /* display: grid; */
-  /* align-items: center; */
-  /* background-color: #ebebeb; */
   margin: 0px 0px;
-  /* padding-left: 15px; */
-  /* min-height: 35px; */
+}
+
+.product_order_grid {
+  background-color: #ebebeb;
+  padding-top: 10px;
+  padding-right: 10px;
+  display: grid;
+  grid-template-columns: 30px 200px 120px 100px 80px 110px 40px 150px 100px;
+  font-size: 18px;
+  grid-column-gap: 4px;
+}
+
+.product_order_self {
+  margin: 0px 0px;
+}
+
+.padding_order {
+  padding-left: 5px;
 }
 
 .center_text {
@@ -461,5 +474,41 @@ aside {
 }
 
 .small_text {
+  font-size: 14px;
+}
+
+.cost_order {
+  margin-top: 10px;
+  font-size: 24px;
+}
+
+/* форма заказа */
+.order {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  margin: 10px 0;
+}
+
+.order_block {
+  display: grid;
+  place-items: center;
+  text-align: center;
+  width: 100%;
+  height: auto;
+  padding: 24px 0px;
+  background-color: #cacaca;
+  font-size: 20px;
+  border-radius: 10px;
+  border: 2px solid rgb(0, 0, 0);
+  padding-bottom: 34px;
+}
+
+.input_text_order {
+  width: 300px;
+  border-radius: 10px;
+  border: 1px solid rgb(0, 0, 0);
+  padding: 10px;
   font-size: 14px;
 }
