--- a/static_dev/css/style.css
+++ b/static_dev/css/style.css
@@ -415,6 +415,16 @@ aside {
   grid-column-gap: 4px;
 }
 
+.product_order_list_grid {
+  background-color: #ebebeb;
+  padding-top: 10px;
+  padding-right: 10px;
+  display: grid;
+  grid-template-columns: 30px 180px 120px 100px 100px 80px 80px 150px 100px;
+  font-size: 18px;
+  grid-column-gap: 4px;
+}
+
 .product_order_self {
   margin: 0px 0px;
 }
