--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -15,6 +15,8 @@
                   {% csrf_token %}
                   <input type="submit" value="Выход" class="button_form">
             </form>
+
+            <div class="text_user">Пользователь: <span class="red_text">{{ user }}</span></div>
         {% else %}
             <a href="{% url 'users:signup' %}"><div class="button_header">
                 <div>Регистрация</div>
